Start working on dropdown component; add first tests

--- a/test/index.html
+++ b/test/index.html
@@ -47,11 +47,11 @@
             overflow: auto;
             z-index: 9999;
             border: 1px solid #ccc;
-            display: none;
+            /*display: none;*/
         }
 
         #ember-testing {
-            zoom: 50%;
+            zoom: 70%;
         }
     </style>
 </head>
